fix: center text on iOS devices

--- a/src/blocks/card/__heart-icon/card__heart-icon.css
+++ b/src/blocks/card/__heart-icon/card__heart-icon.css
@@ -5,6 +5,7 @@
   width: 21px;
   height: 19px;
   border: 0;
+  margin-bottom: 3px;
   outline: none;
   background-color: transparent;
   background-image: url(../../../images/heart-icon.svg);
