--- a/src/blocks/card/__likes-counter/card__likes-counter.css
+++ b/src/blocks/card/__likes-counter/card__likes-counter.css
@@ -1,6 +1,7 @@
 .card__likes-counter {
-    align-self: center;
-    margin: 3px 0 0 0;
     color: #000;
     font-size: 13px;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
