--- a/src/blocks/card/card__likes-container/card__likes-container.css
+++ b/src/blocks/card/card__likes-container/card__likes-container.css
@@ -2,6 +2,4 @@
     display: flex;
     display: -webkit-flex;
     flex-direction: column;
-    align-items: center;
-    -webkit-align-items: center;
 }
